# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Donut-LLM-Tools"
version = "24.05.27.3"
description = "Tools for Creating Datasets and Models locally"
readme = "README"
authors = [{ name = "Gautham Nair", email = "gautham.nair.2005@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["AI", "trainer", "dataset"]
dependencies = [
    "CreateLLM",
    "Wikipedia",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/gauthamnair2005/donut-llm-tools"