# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Donut-LLM-Tools"
version = "24.05.29"
description = "Tools for creating datasets, training and loading AI models"
readme = "README.md"
authors = [{email = "gautham.nair.2005@gmail.com"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["AI", "ML", "Train", "Model", "Dataset"]
dependencies = [
    "DonutLLMCore",
    "wikipedia"
]
requires-python = ">=3.9, <3.12"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
[tool.bumpver]
current_version = "24.05.29"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

